# Project3

./: CMakeLists.txt
src/: camera.cpp  camera.h  config.h  cube.cpp  cube.h  glad.c  main.cpp  processInput.cpp  processInput.h  stb_image.h
src/shaders/: fragment.txt  vertex.txt
